objects/UamTestObject001__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>UamTestObject001s</relationshipLabel>
        <relationshipName>UamTestObject001s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TPickList01__c</fullName>
        <label>TPickList01</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>v1</fullName>
                </value>
                <value>
                    <fullName>v2</fullName>
                </value>
                <value>
                    <fullName>v3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UamTestObject001F__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UamTestObject001F</label>
        <referenceTo>UamTestObject001__c</referenceTo>
        <relationshipLabel>UamTestObject001s</relationshipLabel>
        <relationshipName>UamTestObject001s</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>UamTestObject001</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>UamTestObject001 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UamTestObject001s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>